# FreeRTOS-Kernel

./: CMakeLists.txt  freertos_stats.cpp  list.c  queue.c  tasks.c  timers.c
CMSIS_RTOS_V2/: CMakeLists.txt  cmsis_os2.c  cmsis_os2.h  freertos_mpool.h  freertos_os2.h
include/: CMakeLists.txt  freertos_stats.hpp  queue.h
portable/MemMang/: heap_4.c
